--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -24,7 +24,7 @@
           <mat-icon>search</mat-icon>
         </button>
         <form [formGroup]="searchForm" style="margin-top:10px;">
-          <input matInput placeholder="Buscar" name="search" class="requests__title--input" formControlName="ot" />
+          <input matInput placeholder="Buscar" name="search" class="requests__title--input" formControlName="ot" autocomplete="off"/>
         </form>
       </div>
 
