--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -25,7 +25,7 @@
         </button>
         <form [formGroup]="searchForm" style="margin-top:10px;">
           <input matInput placeholder="Buscar" name="search" class="requests__title--input" formControlName="ot"
-            style="color: #333333; " />
+            style="color: #333333; " autocomplete="off" />
         </form>
       </div>
 
