--- a/src/app/main/pages/quality/analysis/progress/progress.component.html
+++ b/src/app/main/pages/quality/analysis/progress/progress.component.html
@@ -46,18 +46,15 @@
           </div>
           <div>
             <mat-menu #requestsMenu="matMenu">
-              <button mat-menu-item (click)="accCorrective(item)">
-                <mat-icon>add_task</mat-icon> Acc. Correctivas
+              <button mat-menu-item (click)="analysis(item)">
+                <mat-icon>add_task</mat-icon> Analisis
               </button>
               <button mat-menu-item (click)="detailDialog(item, item.eventType)">
                 <mat-icon>visibility</mat-icon> Detalle
               </button>
               <button mat-menu-item (click)="timeline(item)">
                 <mat-icon>timeline</mat-icon> Línea de tiempo
-              </button>
-              <button mat-menu-item (click)="analysis(item)">
-                <mat-icon>analytics</mat-icon> Analisis
-              </button>
+              </button>              
             </mat-menu>
             <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
               <mat-icon>more_vert</mat-icon>
