--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -144,22 +144,21 @@ span.mat-option-text{
 .cards-container {
     display: flex;
     justify-content: space-evenly;
-    padding: 20px;
-    background: #f0eded;
+    padding: 20px 12px;
     display: grid;
-    grid-column-gap: 5px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-column-gap: 8px;
+    grid-row-gap: 24px;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
 }
 
 .box {
-    margin: 10px 15px;
+    // margin: 10px 15px;
     color: rgba(0, 0, 0, 0.87);
     box-sizing: border-box;
     background: #ffffff;
-    border-radius: 10px 10px 0px 0px;
+    padding: 12px;
     position: relative;
-    width: 200px;
+    width: 230px;
     display: flex;
     flex-direction: column;
 }
@@ -171,7 +170,7 @@ span.mat-option-text{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 5px;
+    // padding: 4px 0px;
 }
 
 .priority {
@@ -189,11 +188,11 @@ span.mat-option-text{
     color: #828282;
 }
 
-::ng-deep .mat-icon-button {
-    width: 25px !important;
-    line-height: 20px !important;
-    height: 20px !important;
-}
+// ::ng-deep .mat-icon-button {
+//     width: 25px !important;
+//     line-height: 20px !important;
+//     height: 20px !important;
+// }
 
 .info-box {
     padding: 5px 10px;
@@ -237,6 +236,7 @@ span.mat-option-text{
 .timer-container {
     position: relative;
     height: 35px;
+    width: 230px;
 
     .timer-color {
         background: linear-gradient(90deg, #77b254 0%, #ffcc4d 51.04%, #de2e43 100%);
@@ -281,15 +281,15 @@ input {
     border-radius: 0px 25px 25px 0px;
 }
 
-::placeholder {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.15px;
-    color: rgba(0, 0, 0, 0.6);
-}
+// ::placeholder {
+//     font-family: Roboto;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 16px;
+//     line-height: 24px;
+//     letter-spacing: 0.15px;
+//     color: rgba(0, 0, 0, 0.6);
+// }
 
 .tag {
     padding: 4px 8px;
