--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -1,10 +1,15 @@
 <div class="container">
-  <div class="requests">
+  <!-- <div class="requests">
+
     <div class="requests__title">
       <h1 class="requests__title--name">Solicitudes</h1>
       <div class="requests__title--icon" (click)="settingDialog()">
         <mat-icon mat-list-icon>settings</mat-icon>
       </div>
+      <button type="file" aria-label="add" mat-button class="ms-dialog-button" (click)="create()">
+        <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+        CREAR
+      </button>
       <span class="ms-fill"></span>
 
       <div class="requests__title--select mat-elevation-z4">
@@ -33,40 +38,74 @@
     <div class="requests__quantity">
       <span>{{counter}}</span>
     </div>
+  </div> -->
+
+  <div class="ms-kanban-toolbar mat-elevation-z4">
+    <button mat-stroked-button class="ms-kanban-toolbar__button"
+      [ngClass]="isMobile ? 'ms-kanban-toolbar__button--mobile' : 'ms-kanban-toolbar__button--desktop'">
+      <mat-icon>add</mat-icon>
+      CREAR
+    </button>
+    <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
+      [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+      <mat-icon matPrefix>location_on</mat-icon>
+      <mat-select [formControl]="workshopControl">
+        <mat-option value="">Todos</mat-option>
+        <mat-option *ngFor="let item of workshops" [value]="item.code">
+          {{item.location}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
+      [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+      <mat-icon matPrefix>search</mat-icon>
+      <input matInput type="text" [formControl]="searchControl" placeholder="Escribir" autocomplete="off">
+    </mat-form-field>
+    <span class="ms-fill"></span>
+    <div class="ms-kanban-toolbar__counter">
+      {{counter | number : '2.'}}
+    </div>
+    <button mat-icon-button class="ms-kanban-toolbar__button--icon" (click)="settingDialog()">
+      <mat-icon>settings</mat-icon>
+    </button>
   </div>
   <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 
   <div class="cards-container" *ngIf="evaluation$|async as evaluations">
-    <div class="box mat-elevation-z2" *ngFor="let item of evaluations">
-      <div class="header-box">
-        <span class="tag tag--priority" *ngIf="item.priority === 1">PRIORIDAD</span>
-        <span class="ms-fill"></span>
-        <div>
-          <mat-menu #requestsMenu="matMenu">
-            <button mat-menu-item (click)="initDialog(item)">
-              <mat-icon>play_circle_outline</mat-icon> Iniciar
+    <div *ngFor="let item of evaluations" class="mat-elevation-z4"
+      style="display: flex; flex-direction: column; width: 230px">
+      <div class="box mat-elevation-z2">
+        <div class="header-box">
+          <span class="tag tag--priority" *ngIf="item.priority === 1">PRIORIDAD</span>
+          <span class="ms-fill"></span>
+          <div>
+            <mat-menu #requestsMenu="matMenu">
+              <button mat-menu-item (click)="initDialog(item)">
+                <mat-icon>play_circle_outline</mat-icon> Iniciar
+              </button>
+              <button mat-menu-item (click)="obsDialog(item)">
+                <mat-icon>visibility</mat-icon> Observacion
+              </button>
+              <button mat-menu-item (click)="timeline(item)">
+                <mat-icon>timeline</mat-icon> Línea de tiempo
+              </button>
+            </mat-menu>
+            <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
+              <mat-icon>more_vert</mat-icon>
             </button>
-            <button mat-menu-item (click)="obsDialog(item)">
-              <mat-icon>visibility</mat-icon> Observacion
-            </button>
-            <button mat-menu-item (click)="timeline(item)">
-              <mat-icon>timeline</mat-icon> Línea de tiempo
-            </button>
-          </mat-menu>
-          <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
+          </div>
         </div>
+        <div class="info-box">
+          <div class="lj" matTooltip="WOF" matTooltipPosition="above"><span>{{item.wof}}</span> </div>
+          <div class="info-row">WO Child: <span>{{item.otChild}} </span> </div>
+          <div class="info-row"> WO Main: <span> {{item.otMain}}</span> </div>
+          <div class="info-row"> Nro Parte: <span> {{item.partNumber}}</span></div>
+          <div class="info-row"> Desc.: <span> {{item.description| slice:0:15}}</span></div>
+          <div class="info-row"> Tarea: <span> {{item.task}}</span></div>
+        </div>
+        <div class="ms-fill"></div>
+
       </div>
-      <div class="info-box">
-        <div class="lj" matTooltip="WOF" matTooltipPosition="above"><span>{{item.wof}}</span> </div>
-        <div class="info-row">WO Child: <span>{{item.otChild}} </span> </div>
-        <div class="info-row"> WO Main: <span> {{item.otMain}}</span> </div>
-        <div class="info-row"> Nro Parte: <span> {{item.partNumber}}</span></div>
-        <div class="info-row"> Desc.: <span> {{item.description| slice:0:15}}</span></div>
-        <div class="info-row"> Tarea: <span> {{item.task}}</span></div>
-      </div>
-      <div class="ms-fill"></div>
       <div class="timer-container">
         <div class="timer-color">
         </div>
@@ -80,10 +119,6 @@
         </div>
       </div>
     </div>
-
   </div>
-
-
-
 
 </div>
