--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -7,6 +7,7 @@
 .ms-container {
     padding: 5vh 5vw;
     margin: auto;
+    min-height: 100vh;
 
     .ms-toolbar {
         display: flex;
@@ -82,6 +83,96 @@
                     margin: 12px 0px 0px 0px !important;
                 }
             }
+        }
+    }
+}
+
+// *** Kanban
+.ms-kanban-toolbar {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    background: #fff;
+    padding: 16px;
+
+    &__button {
+        border: 1px #6200ee solid;
+        color: #6200ee;
+        align-self: center;
+
+        &--icon {
+            margin-right: 12px !important;
+            align-self: center;
+            color: rgba(0, 0, 0, 0.38) !important;
+        }
+
+        &--desktop {
+            margin-right: 12px;
+            margin: 0px 8px !important;
+        }
+
+        &--mobile {
+            width: 100% !important;
+            margin: 8px 0px !important;
+        }
+    }
+
+    &__icon {
+        color: #2b2b2b;
+        align-self: center;
+        font-size: 36px;
+        width: 36px;
+        height: 36px;
+        margin-right: 12px;
+    }
+
+    &__title {
+        color: #2b2b2b;
+        align-self: center;
+        font-family: "Poppins", sans-serif;
+
+        font-weight: 900;
+        margin: 0px 24px 0px 0px;
+
+        &--desktop {
+            font-size: 2rem;
+        }
+
+        &--mobile {
+            font-size: 1.6rem;
+        }
+    }
+
+    &__counter {
+        font-family: "Poppins", sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 54px;
+        margin: 0px 12px;
+        color: #2b2b2b;
+    }
+
+    &__input {
+        padding-bottom: 0px !important;
+        font-size: 12px !important;
+
+        .mat-form-field-wrapper {
+            padding: 0px !important;
+        }
+
+        .mat-icon {
+            margin-right: 12px !important;
+        }
+
+        &--desktop {
+            margin: 0px 8px !important;
+        }
+
+        &--mobile {
+            width: 100% !important;
+            margin: 4px 0px !important;
         }
     }
 }
@@ -182,6 +273,7 @@
 .dropzone .file-label {
     font-size: 1.2em;
 }
+
 progress::-webkit-progress-value {
     transition: width 0.1s ease;
 }
@@ -197,6 +289,7 @@ progress::-webkit-progress-value {
     font-size: 1em;
     white-space: nowrap;
 }
+
 .file-cta {
     background-color: #f5f5f5;
     color: #4a4a4a;
